refactor: delete unused api operations
