# src/main/java/org/melsif/secretkeeper/credentials/domain/CredentialService.java
@@ -8,9 +8,4 @@ public interface CredentialService {
 
     List<Credential> fetchCredentials(CredentialSearchCriteria credentialSearchCriteria);
 
-    Credential findCredential(long credentialId);
-
-    Credential changePassword(long credentialId, String newPassword);
-
-    void deleteCredential(long credentialId);
 }
